--- a/lib/images_gallery/templates/layout.html.erb
+++ b/lib/images_gallery/templates/layout.html.erb
@@ -24,7 +24,29 @@
     }
     .grid-item {
       border: 1px solid #ccc;
+      display: inline-block;
       padding: 10px;
+      position: relative;
+      margin: 5px;
+    }
+    .grid-item-details {
+      background-color: rgba(255, 255, 255, 0.9);
+      color: #333;
+      font-size: .8rem;
+      font-variant: small-caps;
+      height: 3rem;
+      left: 0;
+      line-height: 1.2rem;
+      opacity: 0;
+      padding: .2rem 0 10px;
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      text-align: center;
+      text-decoration: none;
+    }
+    .grid-item:hover .grid-item-details {
+      opacity: 1;
     }
   </style>
   </head>
